<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:padding="@dimen/app_padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timeTo"
            style="@style/subhead"
            android:layout_marginBottom="20dp"
            android:minHeight="20dp"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="До: 11.04.2022 00:01" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout style="@style/block">

                <TextView
                    android:id="@+id/daysValue"
                    style="@style/header"
                    android:text="@string/days_def" />

                <TextView
                    style="@style/subhead"
                    android:text="@string/days_subhead" />
            </LinearLayout>

            <LinearLayout style="@style/block">

                <TextView
                    android:id="@+id/hoursValue"
                    style="@style/header"
                    android:text="@string/hours_def" />

                <TextView
                    style="@style/subhead"
                    android:text="@string/hours_subhead" />
            </LinearLayout>

            <LinearLayout style="@style/block">

                <TextView
                    android:id="@+id/minutesValue"
                    style="@style/header"
                    android:text="@string/minutes_def" />

                <TextView
                    style="@style/subhead"
                    android:text="@string/minutes_subhead" />
            </LinearLayout>

            <LinearLayout style="@style/block">

                <TextView
                    android:id="@+id/secondsValue"
                    style="@style/header"
                    android:text="@string/seconds_def" />

                <TextView
                    style="@style/subhead"
                    android:text="@string/seconds_subhead" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@color/button_bg"
        android:onClick="changeDate"
        android:text="Change date"
        android:textAllCaps="false"
        android:textColor="@color/main_text_color"
        android:textSize="18sp" />
</RelativeLayout>